# metric-report

./: .gitignore  README.md  pyproject.toml
2025-03-op/: progress_report.py  protocols_superchain_tvl_mar20_2025_to_mar27_2025.csv
2025-03-op/node/: index.ts  package.json
2025-03-op/python/: progress_report.py  pyproject.toml
2025-08-ufcfm1/: README.md  calculate_unichain_tvl.py  compound-finance-report.txt  euler-report.txt  market_summary.md  morpho-report.txt  venus-report.txt
2025-09-kpi/: README.md  beaconchain_ethstore_raw.json  compute_base_daily_revenue_30d_avg.py  compute_base_tvl_2025_09_26_utc00.py  compute_chain_tvl_at_2025_09_26_utc00.py  compute_ethstore_apr_30d_avg.py  compute_usdc_aavev3_eth_30d_avg.py  compute_usdt_aavev3_eth_30d_avg.py  defillama_chain_base_tvl_raw.json  defillama_chain_hyperliquid_l1_tvl_raw.json  defillama_chain_solana_tvl_raw.json  defillama_fees_base_daily_revenue_raw.json  defillama_yields_usdc_aavev3_eth_raw.json  defillama_yields_usdt_aavev3_eth_raw.json
2025-09-shadow.usdh/: compute_hype_twap.py  pyproject.toml  spec.md
2025-09-shadow.usdh/src/metric_report/: cli.py
2025-10-fomc/2025-10-30T00-28-02-sonnet-4.5/: README.md  pyproject.toml
2025-10-fomc/2025-10-30T00-28-02-sonnet-4.5/binance_twap/: __init__.py  main.py
2025-10-fomc/2025-10-gpt-5-high/: README.md  pyproject.toml
2025-10-fomc/2025-10-gpt-5-high/script/: twap.py
2025-10-fomc/_spec/: 00-todo.md  01-binance-twap.md
2025-10-fomc/_spec/20251030-002844Z-gpt-5-codex/: README.md  pyproject.toml
2025-10-fomc/_spec/20251030-002844Z-gpt-5-codex/src/binance_twap/: __init__.py  cli.py  core.py  fetch.py
2025-10-fomc/_spec/20251030-002844Z-gpt-5-codex/test/: test_core.py
2025-11-shortlived.btc-us-shutdown-ends/: how-we-found-decision-time.md  pyproject.toml  spec.md
2025-11-shortlived.btc-us-shutdown-ends/data/: result.json
2025-11-shortlived.btc-us-shutdown-ends/src/metric_report/: __init__.py  cli.py
2025-11-shortlived.btc-us-shutdown-ends/test/: test_cli.py
2025-11-shortlived.btc-us-venezuela-military-engagement/: pyproject.toml  spec.md
2025-11-shortlived.btc-us-venezuela-military-engagement/src/metric_report/: __init__.py  cli.py
2025-11-shortlived.ftt-sbf-clemency-granted/: pyproject.toml  spec.md
2025-11-shortlived.ftt-sbf-clemency-granted/src/metric_report/: __init__.py  cli.py
2025-11-shortlived.ftt-sbf-clemency-granted/test/: test_cli.py
node/: index.ts  package-lock.json
