[project]
name = "btc-us-shutdown-metric"
version = "0.1.0"
description = "Compute BTC/USD TWAP for the btc-us-shutdown-ends metric question"
readme = "spec.md"
requires-python = ">=3.10"
authors = [{ name = "CFM" }]
dependencies = []

[project.scripts]
btc-us-shutdown-twap = "metric_report.cli:main"

[tool.mypy]
python_version = "3.10"
strict = true
disallow_untyped_defs = true
disallow_any_generics = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
no_implicit_optional = true

[tool.ruff]
line-length = 100
target-version = "py310"
lint.select = ["E", "F", "I", "B", "UP", "SIM", "PL", "RUF"]
lint.ignore = ["E203"]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
