[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my_project"
version = "0.1.0"
description = ""
readme = "../README.md"
license = ""
authors = [
  { name="Your Name", email="you@example.com" }
]
requires-python = ">=3.13"

dependencies = [
  "requests",
]
