[project]
name = "binance-twap-cli"
version = "0.1.0"
description = "CLI to compute 12-hour TWAP for Binance spot (BTCUSDT/ETHUSDT)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "metric-report" }]
dependencies = []

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E","F","I","UP","B","S","W"]
ignore = ["S311"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_optional = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["test"]
